test cases framework.